@@ -18,7 +18,6 @@ package org.apache.lucene.index;
  */
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.concurrent.atomic.AtomicReferenceFieldUpdater;
 import java.util.concurrent.locks.ReentrantLock;
 
@@ -454,11 +453,6 @@ final class DocumentsWriterDeleteQueue implements Accountable {
   @Override
   public long ramBytesUsed() {
     return globalBufferedUpdates.bytesUsed.get();
-  }
-
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
 
   @Override
