@@ -18,7 +18,6 @@ package org.apache.lucene.index;
  */
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -435,15 +434,10 @@ final class DocumentsWriterFlushControl implements Accountable {
 
   @Override
   public long ramBytesUsed() {
+    // TODO: improve this to return more detailed info?
     return getDeleteBytesUsed() + netBytes();
   }
-
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    // TODO: improve this?
-    return Collections.emptyList();
-  }
-
+  
   synchronized int numFlushingDWPT() {
     return flushingWriters.size();
   }
