@@ -18,7 +18,6 @@ package org.apache.lucene.index;
  */
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Iterator;
 
 import org.apache.lucene.store.IndexInput;
@@ -43,11 +42,6 @@ class PrefixCodedTerms implements Iterable<Term>, Accountable {
   @Override
   public long ramBytesUsed() {
     return buffer.ramBytesUsed();
-  }
-  
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
 
   /** @return iterator over the bytes */
