@@ -17,6 +17,8 @@ package org.apache.lucene.util;
  * limitations under the License.
  */
 
+import java.util.Collections;
+
 /**
  * An object whose RAM usage can be computed.
  *
@@ -34,7 +36,8 @@ public interface Accountable {
    * The result should be a point-in-time snapshot (to avoid race conditions).
    * @see Accountables
    */
-  // TODO: on java8 make this a default method returning emptyList
-  Iterable<? extends Accountable> getChildResources();
+  default Iterable<? extends Accountable> getChildResources() {
+    return Collections.emptyList();
+  }
 
 }
