@@ -19,7 +19,6 @@ package org.apache.lucene.util;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 
 import org.apache.lucene.store.DataInput;
 import org.apache.lucene.store.DataOutput;
@@ -134,11 +133,6 @@ public final class PagedBytes implements Accountable {
         size += RamUsageEstimator.sizeOf(blocks[blocks.length - 1]);
       }
       return size;
-    }
-    
-    @Override
-    public Iterable<? extends Accountable> getChildResources() {
-      return Collections.emptyList();
     }
 
     @Override
@@ -256,11 +250,6 @@ public final class PagedBytes implements Accountable {
       size += RamUsageEstimator.sizeOf(currentBlock);
     }
     return size;
-  }
-  
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
 
   /** Copy bytes in, writing the length as a 1 or 2 byte
