@@ -24,7 +24,6 @@ import static org.apache.lucene.util.packed.PackedInts.checkBlockSize;
 import static org.apache.lucene.util.packed.PackedInts.numBlocks;
 
 import java.io.IOException;
-import java.util.Collections;
 
 import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.util.Accountable;
@@ -125,11 +124,6 @@ public class MonotonicBlockPackedReader extends LongValues implements Accountabl
       sizeInBytes += reader.ramBytesUsed();
     }
     return sizeInBytes;
-  }
-  
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
   
   @Override
