@@ -32,7 +32,6 @@ package org.apache.lucene.search.suggest.jaspell;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -110,11 +109,6 @@ public class JaspellTernarySearchTrie implements Accountable {
         }
       }
       return mem;
-    }
-    
-    @Override
-    public Iterable<? extends Accountable> getChildResources() {
-      return Collections.emptyList();
     }
   }
 
@@ -902,10 +896,5 @@ public class JaspellTernarySearchTrie implements Accountable {
       mem += root.ramBytesUsed();
     }
     return mem;
-  }
-  
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
 }
